gcc/testsuite/rust.test/fail_compilation/shadow1.rs
fn main() {
    let mut x = 5;
    let mut x;
    x = true;
    x = x + 2;
}
